# deblib

./: .gitignore  README.md  environment.yaml  pyproject.toml  requirements.txt
deblib/: constants.py  limb_darkening.py  mission.py  orbital.py  stellar.py  utility.py  vmath.py
deblib/core/: orbital_core.py
deblib/data/jktebop/: task2.in.template  task2.in.templateex  taskn.in.templateex
deblib/jktebop/: jktebop.py  task.py  templateex.py
tests/: test_limb_darkening.py  test_mission.py  test_orbital.py  test_stellar.py  test_vmath.py
tests/jktebop/: test_jktebop.py  test_task.py  test_templateex.py
